--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
 .side-menu {
   position: fixed;
   top: 0;
-  left: -250px; /* 初期状態では画面外 */
+  left: -100%; /* 初期状態では画面外 */
   width: 250px;
   height: 100%;
   background-color: #E1F5FE; /* メニューバーの背景色 */
