--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   color: #000000;
   padding: 10px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   position: relative;
 }
