--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 共通スタイル */
 body {
-  background-color: #FFFFFF; 
+  background-color: #E1F5FE; 
   margin: 0;
   font-family: Arial, sans-serif;
   padding: 0;
