--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body {
 .close-button {
   position: absolute;
   top: 10px; /* メニュー内の上端 */
-  left: 20px; /* メニュー内の左端 */
+  right: 40px; /* メニュー内の左端 */
   background: none;
   border: none;
   font-size: 1.5rem;
