--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  z-index: 1000;
   padding-top: env(safe-area-inset-top); /* セーフエリアを考慮してパディングを追加 */
 }
 
