--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* ヘッダー部分 */
 .site-header {
-  background-color: #E1F5FE; /* 薄い水色 */
+  background-color: #0082CA; 
   color: #000000;
   padding:  calc(env(safe-area-inset-top) + 10px) 20px 10px;
   display: flex;
