--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   display: block;
   height: 4px;
   width: 100%;
-  background-color: #000; /* 黒色 */
+  background-color: #fff; /* 白色 */
   border-radius: 2px;
 }
 
