--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body {
   display: block;
   height: 3px;
   width: 100%;
-  background-color: #000; /* ハンバーガーボタンの色 */
+  background-color: #fff; /* ハンバーガーボタンの色 */
   border-radius: 2px;
 }
 
