--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   justify-content: space-between;
   height: 24px;
   width: 40px;
-  position: absolute; /* これを追加 */
+  position: absolute; 
   right: 10px; /* これを追加 */
 }
 
@@ -54,6 +54,8 @@ body {
   margin: 0; /* 左詰め */
   font-size: 1.5rem;
   text-align: left;
+  position: absolute; /* これを追加 */
+  left: 10px; /* これを追加 */
 }
 
 /* ボタン部分 */
