--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 
 .nav-button {
   text-decoration: none;
+  margin-top: 20px; 
   color: #FFFFFF;
   padding: 10px 20px;
   font-size: 1rem;
