--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
 /* サイトタイトル */
 .site-title {
   margin: 0; /* 左詰め */
-  font-size: 1.5rem;
+  font-size: 1.5rem; /* フォントサイズ */
+  font-weight: bold; /* 太字に設定 */
   text-align: left;
   position: absolute; /* これを追加 */
   left: 10px; /* これを追加 */
