--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
   height: 24px;
   width: 40px;
   position: absolute; 
-  top: 5px;
-  right: 10px; /* これを追加 */
+  top: 10px;
+  right: 10px; 
 }
 
 .menu-button span {
