--- a/style.css
+++ b/style.css
@@ -264,6 +264,8 @@ body {
 }
 
 .swiper-slide {
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
