--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ body {
 
 .plan-description h2 {
   font-size: 1.3rem; /* 見出しのサイズ */
-  margin-bottom: 10px;
+  margin-top: 10px;
   text-align: left; 
   margin-left: 20px;
 }
