--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ body {
     font-size: 1.5rem;　 /* 見出しのサイズ */
     text-align: left; 
     margin-left: 20px;
+    margin-top: 10px;
   }
 
 .plan-description {
