--- a/style.css
+++ b/style.css
@@ -281,13 +281,13 @@ body {
 /* カルーセルの調整 */
 .swiper-container {
   width: 100%; /* カルーセルの幅 */
-  height: auto; /* 高さ */
+  height: 300px; /* 高さ */
   margin-top: 20px;
 }
 
 .swiper-slide {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -296,6 +296,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 10px;
   color: #333;
+  overflow: hidden; /* スライドからはみ出た部分は隠す */
 }
 
 .slide-image {
