--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ body {
   margin-top: 20px;
   overflow: hidden; /* 横スクロールを防ぐ */
   max-width: 100%; /* 画面幅を超えないようにするこれを追加 */
+  padding-bottom: 30px;
 }
 
 .swiper-slide {
