--- a/style.css
+++ b/style.css
@@ -268,6 +268,8 @@ body {
 .plan-description {
   margin-top: 20px; /* カルーセルとの余白 */
   padding: 10px;
+  background-color: #F5F5F5;
+  padding: 20px 0; 
 }
 
 .plan-description h2 {
