--- a/style.css
+++ b/style.css
@@ -290,11 +290,10 @@ body {
 .swiper-container {
   width: 100%; /* カルーセルの幅 */
   height: 300px; /* 高さ */
-  margin-top: 0;
+  margin-top: -5px;
   overflow: hidden; /* 横スクロールを防ぐ */
   max-width: 100%; /* 画面幅を超えないようにするこれを追加 */
   padding-bottom: 30px;
-  margin: 0;
 }
 
 .swiper-slide {
