--- a/map.css
+++ b/map.css
@@ -191,4 +191,15 @@
     margin: 0;
 }
 
+.badge-image {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 5px;
+    border-radius: 50%; /* バッジを丸くする */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
 
+.badge-label {
+    font-size: 12px;
+    color: #333;
+}
