--- a/map.css
+++ b/map.css
@@ -176,7 +176,7 @@
 .badge {
     padding: 10px 15px;
     border-radius: 5px;
-    background-color: #007BFF;
+    background-color: #fff;
     color: white;
     font-size: 14px;
     text-align: center;
@@ -192,14 +192,10 @@
 }
 
 .badge-image {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     margin-bottom: 5px;
     border-radius: 50%; /* バッジを丸くする */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.badge-label {
-    font-size: 12px;
-    color: #333;
-}
