--- a/map.css
+++ b/map.css
@@ -43,7 +43,9 @@
 
 /* マップのスタイル */
 #map {
-    height: 500px;
+    position: relative;
+    width: 100%;
+    height: calc(100% - 90px);
 }
 
 /* バナーのスタイル */
