--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   padding: 0;
-  /* 以下の2つを追加 */
+  height: 100%; /* 追加 */
   max-width: 100%; /* 横幅をビューポートに制限 */
   overflow-x: hidden; /* 横スクロールを無効化 */
 }
