--- a/map.css
+++ b/map.css
@@ -43,9 +43,7 @@
 
 /* マップのスタイル */
 #map {
-    position: relative;
-    width: 100%;
-    height: calc(100% - 90px);
+    height: 500px;
 }
 
 /* バナーのスタイル */
