--- a/map.css
+++ b/map.css
@@ -180,7 +180,7 @@
 
 .badge {
     padding: 10px 15px;
-    background-color: #FFD700;
+    background-color: #FFFFFF;
     color: white;
     font-size: 14px;
     text-align: center;
