--- a/schedule.css
+++ b/schedule.css
@@ -4,6 +4,7 @@
   padding-left: 50px; /* タイムラインの余白 */
   border-left: 3px solid #ccc; /* 縦線 */
   margin-top: 20px;
+  margin-left: 10px;
 }
 
 /* タイムラインの項目 */
