--- a/schedule.css
+++ b/schedule.css
@@ -1,10 +1,10 @@
 /* タイムライン全体 */
 .timeline {
   position: relative;
-  padding-left: 0; /* タイムラインの余白 */
+  padding-left: 20px; /* タイムラインの余白 */
   border-left: 3px solid #ccc; /* 縦線 */
   margin-top: 20px;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 /* タイムラインの項目 */
