--- a/schedule.css
+++ b/schedule.css
@@ -1,10 +1,10 @@
 /* タイムライン全体 */
 .timeline {
   position: relative;
-  padding-left: 30px; /* タイムラインの余白 */
-  border-left: 3px solid #ED1A3D; /* 縦線 */
+  padding-left: 20px; /* タイムラインの余白 */
+  border-left: 3px solid #691C2A; /* 縦線 */
   margin-top: 20px;
-  margin-left: 30px;
+  margin-left: 40px;
 }
 
 /* タイムラインの項目 */
