--- a/schedule.css
+++ b/schedule.css
@@ -102,7 +102,8 @@
   border-radius: 10px;
   padding: 20px;
   margin: 0 20px;
-  background-color: white;
+  background-color: #0082CA;
+  color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
